# cms

./: flake.nix
client/: package-lock.json  package.json
client/src/: app.css
client/src/lib/: store.ts
client/src/lib/components/: SectionList.svelte
client/src/lib/models/: Section.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/sections/[id]/: +page.svelte  +page.ts
server/: Cargo.toml
server/src/: api.rs  main.rs
