[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
utoipa = { version = "5.0.0-alpha.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
